# MyBudgetPalBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  states.py
.github/workflows/: ci.yml
database/: db.py
handlers/: exchange.py  finances.py  other.py  registration.py  start.py  tips.py
keyboards/: reply.py
src/budget_bot/: main.py
src/budget_bot/api/: routers.py  schemas.py
src/budget_bot/db/: engine.py  models.py  session.py
src/budget_bot/handlers/: common.py
src/budget_bot/utils/: security.py
tests/: conftest.py  test_database.py  test_handlers.py  test_main.py
tests/api/: test_categories_api.py  test_expenses_api.py
tests/handlers/: test_common.py
tests/utils/: test_security.py
tma_frontend/: index.html
